Fix color contrast in codeblock

--- a/src/styles/components/_code.scss
+++ b/src/styles/components/_code.scss
@@ -11,14 +11,20 @@
 
 html[data-theme="light"] {
   --code-block-bg-c: var(--color-interface-10);
+  --color-string: var(--color-warning-dark);
 }
 
 html[data-theme="dark"] {
   --code-block-bg-c: var(--token-secondary-bg-c);
+  --color-string: var(--color-warning-20);
 }
 
 .token-line {
   color: var(--ifm-pre-color) !important;
+}
+
+.token.string {
+  color: var(--color-string) !important;
 }
 
 :not(pre) > code {
